# tinyx86

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  board.c  log.c  main.c  spdlog.cc  tinyx86.c  tinyx86.cc
cpu/: CMakeLists.txt  cpu.c
fw/: disasm_bios.sh
gui/: CMakeLists.txt  window.c
hw/: CMakeLists.txt  board.c  board.cc
hw/chipset/: CMakeLists.txt  alias.c  bios.c  io.cc  memory.c  mmio.c  ram.c  rom.c  rtc.cc
hw/chipset/memory/: CMakeLists.txt  controller.cc  ram.cc  rom.cc
hw/cpu/: CMakeLists.txt  arithmetic.c  arithmetic.cc  cpu.c  cpu.cc  decode.cc  memory.c  modrm.cc  opcode.c  opcode.cc  opcode_common.c  opcode_two.c
hw/vga/: CMakeLists.txt
include/: board.h  cxxopts.h  list.h  tinyx86.h  x86emu.h
include/cpu/: cpu.h
include/gui/: window.h
include/hw/: board.h
include/hw/chipset/: alias.h  bios.h  io.h  memory.h  mmio.h  ram.h  rom.h  rtc.h
include/hw/chipset/memory/: controller.h  generic.h  ram.h  rom.h
include/hw/cpu/: arithmetic.h  cpu.h  decode.h  memory.h  opcode.h
include/spdlog/: tweakme.h
test/: hello  hello.asm  hello.disasm
